finished put route for equipment
